--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "clean-android": "cd android && rm -Rf build && rm -Rf app/build && cd ../",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "build-ios": "cd ios && pod install && cd ../",
+    "clean-ios": "cd ios && rm -Rf Pods && rm -Rf Podfile.lock && rm -Rf build && rm -Rf DemoReduxToolkit.xcworkspace && cd ../",
+    "refresh": "yarn clean-ios && yarn clean-android && rm -Rf yarn.lock && rm -Rf node_modules && yarn",
+    "refresh-ios": "yarn clean-ios && yarn clean-android && rm -Rf yarn.lock && rm -Rf node_modules && yarn && yarn build-ios",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "redux": "^4.2.1",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,10 +32,15 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.0.4"
   },
