--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "redux": "^4.2.1",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "@react-native-community/checkbox": "^0.5.15",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-safe-area-context": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
